testsuite/tests/explicit-dicts/should_fail/MultiParamRoles.stderr

MultiParamRoles.hs:26:5: error:
    • Explicit dictionary application to: ‘Convert a b’
      is not allowed because of instance incoherence:
      In the function type ‘a -> Set a -> Set a’
        Type variable ‘a’ has role Nominal
    • In the expression: f ((dict))
      In an equation for ‘g’:
          g = f ((dict))
            where
                dict = Convert.Dict {parent1 = reverseOrd, convert = undefined}
